feat:新增自动获取当前学期课表接口
